# Mahalli

./: .oxfmtignore  .oxlintignore  .oxlintrc.json  Makefile  README.md  bun.lockb  components.json  mahalli.sqlite  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: releases.yml
app/: app.vue  bindings.ts
app/components/: ChartHolder.vue  ClientCreate.vue  ClientDelete.vue  ClientUpdate.vue  ClientsTable.vue  ColumnVisibilityDropdown.vue  CreditNoteCreate.vue  (+42 more)
docs/: B2B_WORKFLOW_AUDIT.md  CHANGES_SUMMARY.md  future-features.md
i18n/: i18n.config.ts
scripts/: patch-entities.ps1  release.sh
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  mahalli.sqlite  tauri.conf.json
src-tauri/crates/system-entity/: Cargo.toml
src-tauri/crates/system-entity/src/: databases.rs  lib.rs  prelude.rs  seller_profile.rs
src-tauri/crates/system-migration/: Cargo.toml
src-tauri/crates/system-migration/src/: lib.rs  m20260416_000001_create_databases.rs  m20260428_000001_seller_profile.rs  main.rs
src-tauri/crates/system-service/: Cargo.toml
src-tauri/crates/system-service/src/: lib.rs  models.rs  mutations.rs  queries.rs  service.rs
src-tauri/crates/system-service/src/databases/: service.rs
src-tauri/crates/system-service/src/seller_profile/: dto.rs  mod.rs  service.rs
src-tauri/crates/tenant-entity/: Cargo.toml
src-tauri/crates/tenant-entity/src/: clients.rs  credit_note_items.rs  credit_notes.rs  delivery_note_items.rs  delivery_notes.rs  inventory_mouvements.rs  inventory_transactions.rs  invoice_items.rs  invoice_payments.rs  invoices.rs  lib.rs  order_items.rs  orders.rs  prelude.rs  products.rs  quote_items.rs  quotes.rs  suppliers.rs  templates.rs  user_column_preferences.rs
src-tauri/crates/tenant-migration/: Cargo.toml
src-tauri/crates/tenant-migration/src/: lib.rs  m20220101_000001_create_core_entities.rs  m20220101_000001_init_.rs  m20220101_000002_create_quote_flow.rs  m20220101_000003_create_order_flow.rs  m20220101_000004_create_delivery_notes.rs  m20220101_000005_create_invoices.rs  m20220101_000006_create_indexes_and_triggers.rs  m20260427_000002_user_column_preferences.rs  m20260428_000001_add_delivery_note_to_invoices.rs  m20260428_000002_add_finalized_at_to_invoices.rs  m20260428_000003_create_credit_notes.rs  main.rs
src-tauri/crates/tenant-service/: Cargo.toml
src-tauri/crates/tenant-service/src/: lib.rs  mutations.rs  queries.rs  seed.rs  status.rs
src-tauri/crates/tenant-service/src/clients/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/column_preferences/: mod.rs  service.rs
src-tauri/crates/tenant-service/src/credit_notes/: dto.rs  mod.rs  service.rs
src-tauri/crates/tenant-service/src/dashboard/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/delivery_notes/: dto.rs  mod.rs  service.rs
src-tauri/crates/tenant-service/src/inventory/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/invoices/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/models/: dashboard.rs  invoice.rs  invoice_item.rs  order_item.rs  product.rs  quote_item.rs
src-tauri/crates/tenant-service/src/orders/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/products/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/quotes/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/services/: mod.rs
src-tauri/crates/tenant-service/src/services/clients/: service.rs  types.rs
src-tauri/crates/tenant-service/src/services/dashboard/: mod.rs  service.rs
src-tauri/crates/tenant-service/src/services/inventory/: service.rs
src-tauri/crates/tenant-service/src/services/invoices/: service.rs
src-tauri/crates/tenant-service/src/services/orders/: service.rs
src-tauri/crates/tenant-service/src/services/products/: service.rs  types.rs
src-tauri/crates/tenant-service/src/services/quotes/: service.rs  types.rs
src-tauri/crates/tenant-service/src/services/suppliers/: service.rs  types.rs
src-tauri/crates/tenant-service/src/services/templates/: service.rs
src-tauri/crates/tenant-service/src/suppliers/: dto.rs  service.rs
src-tauri/crates/tenant-service/src/templates/: dto.rs  service.rs
src-tauri/entity/src/: clients.rs  inventory_transactions.rs  invoice_items.rs  invoices.rs  lib.rs  order_items.rs  orders.rs  prelude.rs  products.rs  quote_items.rs  quotes.rs  suppliers.rs  templates.rs
src-tauri/migration/src/: lib.rs  m20220101_000001_init_.rs  m20240216_201704_seed_init_.rs  m20260413_000001_invoice_items.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  mutations.rs  queries.rs  transactions.rs
src-tauri/service/src/models/: client.rs  inventory.rs  invoice.rs  invoice_item.rs  order.rs  order_item.rs  product.rs  quote.rs  quote_item.rs  shared.rs  supplier.rs
src-tauri/src/: lib.rs  specta.rs
src-tauri/src/commands/: clients.rs  column_preferences.rs  credit_notes.rs  dashboard.rs  databases.rs  delivery_notes.rs  inventory.rs  invoice_items.rs  invoices.rs  mod.rs  order_items.rs  orders.rs  products.rs  quote_items.rs  quotes.rs  seed.rs  seller_profile.rs  suppliers.rs  templates.rs
src-tauri/src/db/: manager.rs  mod.rs  paths.rs  system.rs  tenant.rs
src-tauri/src/jobs/: db.rs
src-tauri/src/jobs/images/: image_optimizer.rs
(+94 files in other folders)
