[package]
name = "mahalli"
version = "1.0.0"
description = "Inventory & invoicing management app"
authors = ["AbdelilahOu"]
license = ""
repository = "https://github.com/AbdelilahOu/Mahalli-desktop"
default-run = "mahalli"
edition = "2021"
rust-version = "1.82"
build = "src/build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "service", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

specta = { version = "=2.0.0-rc.24", features = ["derive", "function", "serde_json"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }

tauri = { version = "2.10", features = ["protocol-asset"] }

tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

apalis = { version = "0.5", features = ["sqlite", "limit", "tracing", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenvy = "0.15.7"
log = "^0.4"
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
image = "0.25"
dirs = "5.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["sqlite"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
