[package]
name = "mahalli"
version = "1.0.0"
description = "Inventory & invoicing management app"
authors = ["AbdelilahOu"]
license = ""
repository = "https://github.com/AbdelilahOu/Mahalli-desktop"
default-run = "mahalli"
edition = "2021"
rust-version = "1.82"
build = "src/build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
  ".",
  "crates/tenant-entity",
  "crates/tenant-migration",
  "crates/tenant-service",
  "crates/system-entity",
  "crates/system-migration",
  "crates/system-service",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

specta = { version = "=2.0.0-rc.24", features = ["derive", "function", "serde_json"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }

tauri = { version = "2.10", features = ["protocol-asset"] }

tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
log = "^0.4"
tenant-migration = { path = "./crates/tenant-migration" }
tenant-service = { path = "./crates/tenant-service" }
system-migration = { path = "./crates/system-migration" }
system-service = { path = "./crates/system-service" }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
